corpus/baselines/conformance/jsdoc/jsdocTypeTagParameterType.errors.txt
a.js(1,20): error TS1005: '}' expected.
a.js(2,12): error TS7006: Parameter 'value' implicitly has an 'any' type.
a.js(7,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== a.js (3 errors) ====
    /** @type {function(string): void} */
                       ~
!!! error TS1005: '}' expected.
    const f = (value) => {
               ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
        value = 1 // should error
    };
    /** @type {(s: string) => void} */
    function g(s) {
        s = 1 // Should error
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    }
    